fix(app): 🐛 set 0 opacity instead of hidden visibility in sr utility

--- a/packages/app/src/css/screen_reader_only.utility.css
+++ b/packages/app/src/css/screen_reader_only.utility.css
@@ -1,5 +1,5 @@
 .screen_reader_only {
   position: absolute;
-  visibility: hidden;
+  opacity: 0;
   pointer-events: none;
 }
